@@ -1,5 +1,10 @@
 2008-06-21  Stefan Kost  <ensonic@users.sf.net>
 
+	* tools/migratetmpl.pl:
+	  Factor out multiline formatting and use for deprecated field too.
+
+2008-06-21  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-mkdb.in:
 	  Commenting.
 
